          - MatrixUtils: remove ContainsNaN()
          - VectorUtils: add L1Norm()
          - fix bug in Ratings that prevented online updates to work properly
            (reported by Chris Newell)
	- documentation
          - some API doc improvements
          - get rid of the word 'engine', as it usually carries no relevant
            information

1.02	2011-05-24
	- recommenders
          - BPR_Linear: less verbose output
          - BPRMF: fix loading/saving of models
          - BiasedMatrixFactorization: simplify a bit
          - SlopeOne: move computation of rating average to Train()
	  - BiPolarSlopeOne: fix loading/saving of models
          - UserItemBias: set default values for reg_u and reg_i
	- command-line tools
	  - item prediction: fix null pointer exception when no --test-file is
            given
          - rating prediction: save model file in all cases when requested
        - documentation
          - fix Doxygen API doc (wrong path)
          - Doxygen: do not build LaTeX doc; add main page
          - remove <inheritdoc/> XML tags - currently not supported by any
            tool we use
          - drop ImmDoc.NET support

1.01	2011-05-19
        - API changes
          - add interface IEntityMapping
          - IRatings: add CountByUser and CountByItem
        - recommenders
          - make ItemRecommender and RatingPredictor clonable
          - BiasedMatrixFactorization
            - rename BiasRegularization to BiasReg for consistency with other
              recommenders
            - different regularization parameters for user and item factors
            - add ComputeLoss() (also for MatrixFactorization)
            - add optional bold driver heuristic for learn rate adaptation
          - BPRMF:
            - get rid of unnecessary IterationLength parameter
            - only interate once over relevant data points in online learning
            - explicitly model item bias
            - significant training speed-up