@@ -46,6 +46,10 @@
           - some API doc improvements
           - get rid of the word 'engine', as it usually carries no relevant
             information
+	- misc
+          - move GridSearch to experimental section
+          - add Nelder-Mead algorithm for hyperparameter selection; currently
+            only rating prediction is supported (experimental)
 
 1.02	2011-05-24
 	- recommenders
